# agentic-2.0

./: .env.example  .gitignore  COPILOT-INSTRUCTIONS.md  Dockerfile  Dockerfile.client  Dockerfile.orchestrator  Dockerfile.worker  LICENSE  Makefile  README.md  copilot-instructions.md  deploy.sh  docker-compose.yml  files-1.md  files-2.md  files-3.md  files-4.md  install.sh  missing-files.txt  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  rich_ui.py  rich_ui.py.md  setup.sh
.github/workflows/: ci.yml
agentic-shell/: .env.example  .gitignore  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
agentic-shell/.github/workflows/: ci.yml
agentic-shell/client/src/: app.tsx  index.css
agentic-shell/drizzle/: schema.ts
agentic-shell/kubernetes/: ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
agentic-shell/scripts/: init-db.sql  setup-dev.sh
agentic-shell/server/: pipeline.ts  providerservice.ts
agentic-shell/src/agents/: __init__.py  base.py
agentic-shell/src/client/: cli.py
agentic-shell/src/orchestrator/: auth.py  dependencies.py  main.py
agentic-shell/src/orchestrator/cache/: redis.py
agentic-shell/src/orchestrator/discovery/: consul.py
agentic-shell/src/orchestrator/messaging/: rabbitmq.py
agentic-shell/src/orchestrator/models/: __init__.py  agent.py  common.py  tool.py
agentic-shell/src/orchestrator/routes/: __init__.py  agents.py  health.py  metrics.py  sessions.py
agentic-shell/src/orchestrator/services/: metrics.py  queue.py  tool.py
agentic-shell/src/tools/: __init__.py  aws.py  docker.py  kubernetes.py  registry.py  shell.py
configs/: agent-pool.yml  init.sql  logging.conf  prometheus.yml  tool-registry.yml
configs/prometheus/: prometheus.yml
docker/postgres/: Dockerfile
docs/: api.md  architecture.md  contributing.md  deployment.md
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
migrations/: README.md
scripts/: backup.sh  create-admin.py  init-db.sql  setup-dev.sh
server/: index.ts
src/agents/: base.py  coder.py  debugger.py  executor.py  idempotent_handler.py  optimizer.py  planner.py  reflector.py  worker.py
src/client/: __init__.py  cli.py  rich_ui.py  websocket.py
src/orchestrator/: __init__.py  auth.py  config.py  dependencies.py  main.py
src/orchestrator/cache/: redis.py
src/orchestrator/db/: database.py  pool.py  schema.sql
src/orchestrator/discovery/: consul.py
src/orchestrator/messaging/: rabbitmq.py
src/orchestrator/middleware/: audit.py  idempotency.py
src/orchestrator/models/: agent.py  common.py  session.py  tool.py
src/orchestrator/queue/: dead_letter.py
src/orchestrator/ratelimit/: limiter.py
src/orchestrator/registry/: etcd.py
src/orchestrator/routes/: agents.py  health.py  metrics.py  sessions.py  tools.py
src/orchestrator/services/: __init__.py  agent.py  health.py  metrics.py  queue.py  session.py  tool.py
src/orchestrator/session/: storage.py
src/orchestrator/ws/: manager.py
src/shared/: circuit_breaker.py  correlation.py  logging.py  metrics.py
src/tools/: aws.py  docker.py  github.py  kubernetes.py  registry.py  shell.py
tests/integration/: test_pipeline.py
tests/load/: locustfile.py
tests/unit/: test_agent.py  test_tools.py
