[tool.poetry]
name = "agentic-shell"
version = "0.1.0"
description = "A distributed agentic shell orchestration platform"
authors = ["agentic-shell contributors"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.0"
aio-pika = "^9.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
rich = "^13.7.0"
typer = "^0.12.0"
websockets = "^12.0"
boto3 = "^1.34.0"
kubernetes = "^29.0.0"
PyGithub = "^2.3.0"
openai = "^1.20.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
locust = "^2.24.0"
black = "^24.3.0"
isort = "^5.13.0"
mypy = "^1.9.0"
ruff = "^0.3.0"

[tool.poetry.scripts]
agentic = "src.client.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
